Resolved removeWithValue bug in SLL Class